--- a/blog/first-cat-post/index.mdx
+++ b/blog/first-cat-post/index.mdx
@@ -1,6 +1,10 @@
 ---
 title: "first cat post"
 date: "2022-06-02"
+tags:
+  - "HTML"
+  - "CSS"
+  - "NODEJS"
 hero_image: "./216C553953FC27C335.jpg"
 hero_image_alt: cat is cute"
 hero_image_credit_text: "??"
