--- a/blog/another-post/index.mdx
+++ b/blog/another-post/index.mdx
@@ -1,6 +1,10 @@
 ---
 title: "Another Post"
 date: "2021-07-24"
+tags:
+  - HTML
+  - CSS
+  - JS
 hero_image: "./anthony-duran-eLUBGqKGdE4-unsplash.jpg"
 hero_image_alt: "A grey and white pitbull wading happily in a pool"
 hero_image_credit_text: "Anthony Duran"
