--- a/blog/my-first-post/index.mdx
+++ b/blog/my-first-post/index.mdx
@@ -1,6 +1,10 @@
 ---
 title: "My First Post"
 date: "2021-07-23"
+tags:
+  - "HTML"
+  - "CSS"
+  - "J"
 hero_image: "./christopher-ayme-ocZ-_Y7-Ptg-unsplash.jpg"
 hero_image_alt: "A gray pitbull relaxing on the sidewalk with its tongue hanging out"
 hero_image_credit_text: "Christopher Ayme"
