--- a/blog/yet-another-post/index.mdx
+++ b/blog/yet-another-post/index.mdx
@@ -1,6 +1,10 @@
 ---
 title: "Yet Another Post"
 date: "2021-07-25"
+tags:
+  - "HTML"
+  - "CSS"
+  - "JS"
 hero_image: "./jane-almon-7rriIaBH6JY-unsplash.jpg"
 hero_image_alt: "A white pitbull wearing big googly-eye glasses"
 hero_image_credit_text: "Jane Almon"
